unpackaged/main/default/objects/Booth_Area__c/Booth_Area__c.object-meta.xml
<CustomObject>
    <label>Booth Area</label>
    <nameField>
        <label>Booth Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booth Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>