unpackaged/main/default/objects/Booth_Area__c/fields/BoothID_Area__c.field-meta.xml
<CustomField>
    <fullName>BoothID_Area__c</fullName>
    <label>BoothID/Area</label>
    <length>60</length>
    <type>Text</type>
</CustomField>