unpackaged/main/default/objects/Booth_Area__c/fields/Completion_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_time__c</fullName>
    <label>Completion Date/time</label>
    <type>DateTime</type>
</CustomField>