unpackaged/main/default/objects/Booth_Area__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connect2 Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipLabel>Booth Areas</relationshipLabel>
    <relationshipName>Booth_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>