unpackaged/main/default/objects/Booth_Area__c/fields/Deleteable__c.field-meta.xml
<CustomField>
    <fullName>Deleteable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleteable</label>
    <type>Checkbox</type>
</CustomField>