unpackaged/main/default/objects/Booth_Area__c/fields/Delivery_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_time__c</fullName>
    <label>Delivery Date/time</label>
    <type>DateTime</type>
</CustomField>