unpackaged/main/default/objects/Booth_Area__c/fields/Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Display_Sequence__c</fullName>
    <label>Display Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>