unpackaged/main/default/objects/Booth_Area__c/fields/FacilityId__c.field-meta.xml
<CustomField>
    <fullName>FacilityId__c</fullName>
    <label>Facility ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>