unpackaged/main/default/objects/Booth_Area__c/fields/GroupOrdersByCategory__c.field-meta.xml
<CustomField>
    <fullName>GroupOrdersByCategory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separate By LOB</label>
    <type>Checkbox</type>
</CustomField>