unpackaged/main/default/objects/Booth_Area__c/fields/GroupOrdersByParent__c.field-meta.xml
<CustomField>
    <fullName>GroupOrdersByParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GroupOrdersByParent</label>
    <type>Checkbox</type>
</CustomField>