unpackaged/main/default/objects/Booth_Area__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <label>Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>