unpackaged/main/default/objects/Booth_Area__c/fields/Removal_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date_time__c</fullName>
    <label>Removal Date/time</label>
    <type>DateTime</type>
</CustomField>