unpackaged/main/default/objects/Booth_Area__c/fields/Show_OccCustomer_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_OccCustomer_ID__c</fullName>
    <label>Show OccCustomer ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>