unpackaged/main/default/objects/Booth_Area__c/fields/ShowOccrCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ShowOccrCustomerId__c</fullName>
    <label>ShowOccrCustomerId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>