unpackaged/main/default/objects/Booth_Area__c/fields/ShowToCustomer__c.field-meta.xml
<CustomField>
    <fullName>ShowToCustomer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ShowToCustomer</label>
    <type>Checkbox</type>
</CustomField>