unpackaged/main/default/objects/Booth_Area__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <inlineHelpText>Zone ID of the Booth Area</inlineHelpText>
    <label>Zone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>