unpackaged/main/default/objects/Booth_Area__c/fields/Zone_Id__c.field-meta.xml
<CustomField>
    <fullName>Zone_Id__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>