unpackaged/main/default/objects/Booth_Area__c/listViews/GCDC_2022.listView-meta.xml
<ListView>
    <fullName>GCDC_2022</fullName>
    <columns>NAME</columns>
    <columns>BoothID_Area__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Connect2_Show__c</field>
        <operation>equals</operation>
        <value>CS-7151</value>
    </filters>
    <label>GCDC 2022</label>
    <language>en_US</language>
</ListView>