unpackaged/main/default/objects/Booth_Area__c/listViews/TEMPLATE_Sequence_and_Customer_View.listView-meta.xml
<ListView>
    <fullName>TEMPLATE_Sequence_and_Customer_View</fullName>
    <columns>NAME</columns>
    <columns>GroupOrdersByCategory__c</columns>
    <columns>Display_Sequence__c</columns>
    <columns>ShowOccrCustomerId__c</columns>
    <columns>Show_OccCustomer_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Connect2_Show__c</field>
        <operation>equals</operation>
        <value>CS-XXXXX</value>
    </filters>
    <label>TEMPLATE: Sequence and Customer View</label>
</ListView>